[gd_scene load_steps=23 format=3 uid="uid://ba7iweva2letk"]

[ext_resource type="Script" uid="uid://yhhjv7ev5hw6" path="res://scenes/Enemy/enemy.gd" id="1_8fccx"]
[ext_resource type="Texture2D" uid="uid://bqnwc40s7fxre" path="res://assets/assets/enemy/IDLE.png" id="1_ftuji"]
[ext_resource type="Texture2D" uid="uid://bwo247be5k5f0" path="res://assets/assets/enemy/FLYING.png" id="2_8fccx"]
[ext_resource type="Texture2D" uid="uid://chn5j1gnv51d8" path="res://assets/assets/enemy/DEATH.png" id="2_hjlif"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dtig6"]
atlas = ExtResource("2_hjlif")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o54g"]
atlas = ExtResource("2_hjlif")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfomc"]
atlas = ExtResource("2_hjlif")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hw2c"]
atlas = ExtResource("2_hjlif")
region = Rect2(243, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a20e"]
atlas = ExtResource("2_hjlif")
region = Rect2(324, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w4el"]
atlas = ExtResource("2_hjlif")
region = Rect2(405, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjlif"]
atlas = ExtResource("1_ftuji")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6xdp"]
atlas = ExtResource("1_ftuji")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg87x"]
atlas = ExtResource("1_ftuji")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_hucwo"]
atlas = ExtResource("1_ftuji")
region = Rect2(243, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys4s2"]
atlas = ExtResource("2_8fccx")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf8gp"]
atlas = ExtResource("2_8fccx")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h5g3"]
atlas = ExtResource("2_8fccx")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti0ca"]
atlas = ExtResource("2_8fccx")
region = Rect2(243, 0, 81, 71)

[sub_resource type="SpriteFrames" id="SpriteFrames_ottur"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtig6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o54g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfomc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hw2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a20e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w4el")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjlif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6xdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg87x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hucwo")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys4s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf8gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h5g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti0ca")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ottur"]
size = Vector2(29, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xu144"]
size = Vector2(36, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8fccx"]
size = Vector2(34, 15)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_8fccx")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -2)
scale = Vector2(0.407215, 0.457747)
sprite_frames = SubResource("SpriteFrames_ottur")
animation = &"walk"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1.5)
shape = SubResource("RectangleShape2D_ottur")

[node name="GroundCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)

[node name="WallCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0

[node name="DamageShape" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_xu144")

[node name="StompArea" type="Area2D" parent="."]

[node name="StomShape" type="CollisionShape2D" parent="StompArea"]
position = Vector2(1, -13.5)
shape = SubResource("RectangleShape2D_8fccx")

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
